--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '3136606774';
+    var serviceWorkerVersion = '2374046665';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBaBenQWlfp2Csczzg7-Eww5NB09wo_nak"></script>
 </head>
 <body>
   <script>
